--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-  background: #000 url(/background.jpg) center center no-repeat fixed;
+  background: #000 url("background.jpg") center center no-repeat fixed;
   background-size: cover;
   color: #fff;
 }
